<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="top"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/register_top_back_textview"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/register_top_back_textview"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_weight="6.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </LinearLayout>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/register_Textview_userid"
                android:text="@string/register_Textview_userid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/register_editText_userid"
                android:ems="10"
                android:id="@+id/register_editText_userid" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/register_Textview_name"
                android:text="@string/register_Textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/register_editText_name"
                android:ems="10"
                android:id="@+id/register_editText_name" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/register_button"
                android:text="@string/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>