<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="top"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:gravity="center"
            android:id="@+id/bind_top_back_textview"
            android:background="@drawable/back_1"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </LinearLayout>

        <TextView
            android:gravity="center"
            android:id="@+id/bind_top_more_textview"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/bind_top_more_textview"
            android:textAllCaps="false"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/bind_textview"
                android:text="@string/bind_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:minEms="5"
                android:hint="@string/bind_edittext"
                android:id="@+id/bind_edittext" />
        </LinearLayout>
        <Button
            android:layout_gravity="center"
            android:id="@+id/bind_button"
            android:layout_marginTop="10dp"
            android:text="@string/bind_button"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textIsSelectable="true"
                android:clickable="true"
                android:textSize="12sp"
                android:text="需要先加一个好友绑定其userID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textIsSelectable="true"
                android:clickable="true"
                android:textSize="12sp"
                android:text="点击右上角可以查看自己的userID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:textIsSelectable="true"
            android:clickable="true"
            android:textSize="16sp"
            android:id="@+id/bind_imei_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>